--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		</style>
 	</head>
 	<body>
-		<H1>HELLO </H1>
+		<H1> welcome to know more about me. I still have no IDEA what to do with my life YET. Im hoping to win alot of money and waste it on myself.</H1>
 	</body>
 </html>
